--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: GCP – List VMs via OIDC
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]   # adjust if needed
+    branches: [ main-2 ]   # adjust if needed
 
 permissions:
   contents: read
